Developer/src/objects/ContractCycleImage__c.object
<CustomObject>
    <fields>
        <fullName>ContractCycle__c</fullName>
        <label>コントラクトサイクル</label>
        <referenceTo>ContractCycle__c</referenceTo>
        <relationshipLabel>画像</relationshipLabel>
        <relationshipName>ContractCycle</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ImageNumber__c</fullName>
        <label>ImageNumber</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfferLine__c</fullName>
        <label>オファーライン</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>画像</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ImageNumber__c</columns>
        <columns>OfferLine__c</columns>
        <columns>ContractCycle__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>画像名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>